# portpilot

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: competitive-research.md  competitive-research.zh-CN.md  execution-plan.md  product-roadmap.md  product-roadmap.zh-CN.md  release-runbook.md
docs/media/: README.md
scripts/: verify-macos-release.sh  verify_desktop_gateway_smoke.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: inference.rs  models.rs
src-tauri/src/gateway/: mod.rs
src-tauri/src/runtime/: manager.rs
src-tauri/src/storage/: store.rs
src/contexts/: UpdateContext.tsx
src/lib/: tauri.ts  updater.ts
src/shared/: types.ts
